# LabContainer

./: .env  .firebaserc  .gitignore  LICENSE  README.md  demo.sh  docker-compose.yml  gen_auth_key  package-lock.json  package.json  production.yml
.firebase/: hosting.Y2xpZW50L2J1aWxk.cache
analytics/: Dockerfile  README.md  dependencies.py  env_manager.py  logger.py  main.py  pyproject.toml  requests.rest  utils.py
analytics-server/: README.md
analytics/alembic/: env.py
analytics/alembic/versions/: 0b1add0c6f9b_first.py  474840720280_rev.py  4a11e4582162_second.py  b0a6e5f0536b_one.py  fbe63ab0ed7d_third.py
analytics/api/: environment.py  labs.py  milestones.py  team.py
analytics/core/: db.py  schemas.py
analytics/crud/: crud.py
analytics/student-env/: Dockerfile  README.md
auth/: .gitignore  Dockerfile  README.md  alembic.ini  crud.py  db.py  dependencies.py  env_manager.py  logger.py  main.py  pyproject.toml  requests.rest  requirements.txt  schemas.py  utils.py
auth/alembic/: env.py  migrations
auth/alembic/versions/: ee05e1a5704d_first.py
auth/api/: environment.py  users.py  webapp.py
auth/core/: db.py  schemas.py
auth/crud/: crud.py
auth/db/: db.py
auth/db/models/: environments.py  users.py
auth/student-env/: Dockerfile  README.md
client/: .gitignore  .zshrc  README.md  package-lock.json  package.json
cloud/: create_instance.sh  startup.sh
nginx/: nginx.conf
student-client/: README.md  package-lock.json  package.json
student-env/: .env  Dockerfile  README.md  docker-compose.yml
student-manager-service/: .env  .gitignore  (+11 more)
(+144 files in other folders)
